# RSMT-Realtime-Stylized-Motion-Transition

./: .gitignore  .pre-commit-config.yaml  CI_CD_QUICK_START.md  CI_CD_SUMMARY.md  CODEBASE_REORGANIZATION_PLAN.md  Dockerfile  ReadMe.md  debug.py  debug_bvh.py  debug_final_test.py  debug_phase_data.py  direct_preprocessing.py  generate_phase_vectors.py  hello_world.py  manual_preprocessing.py  preprocess_steps.py  pyproject.toml  requirements.txt  requirements_updated.txt  rsmt_demo.py  rsmt_showcase.py  run_preprocess.py  setup.py  simple_inspect_data.py  simple_inspect_phase_vectors.py  test_bvh_access.py  test_bvh_writer.py  train_deephase_simplified.py  train_phase_model.py
.github/workflows/: ci-cd.yml  release.yml
config/: requirements_compat.txt  requirements_working.txt
docs/: README.md  api_documentation.md  conf.py  dataset_preparation.md  deployment_guide.md  inference_guide.md  installation.md  model_architecture.md  motion_conversion.md  testing_bvh_pipeline.md  training_pipeline.md  troubleshooting.md  web_interface_guide.md
docs/project_docs/: ANIMATION_FIXED.md  CHANGELOG.md  CI_CD_INTEGRATION_GUIDE.md  CI_CD_STATUS_DASHBOARD.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  REORGANIZATION_SUMMARY.md  TRAINING_SUMMARY.md  VISUALIZATION_COMPLETE.md
fixes/: fix_dependencies.py  fix_kinematics.py  fix_lightning_compatibility.py  fix_skeleton.py  fix_skeleton_improved.py
logs/: binary_inspection_log.txt  log_data_check.py  preprocess_log.txt
output/analysis_report/: analysis_report.md
output/demo_visualizations/: blender_instructions.md
output/enhanced_test/: dramatic_walking.bvh  style_variation.bvh
output/extreme_motion/: extreme_motion.bvh
output/inference/: test_bvh_writer.bvh  test_pipeline.bvh
output/inference/final_test/: final_test.bvh
output/manifold/run_20250509_143448/: best_model.pt  checkpoint_epoch_10.pt  final_model.pt
output/manifold/run_20250509_143611/: best_model.pt  checkpoint_epoch_10.pt  checkpoint_epoch_20.pt  final_model.pt
output/manifold/run_20250626_024114/: best_model.pt  checkpoint_epoch_10.pt  final_model.pt
output/motion_transitions/: character_styles_transitions.bvh
output/phase_model/: training_log_20250509_120436.txt
output/sampler/run_20250509_144132/: best_model.pt  checkpoint_epoch_10.pt  final_model.pt
output/sampler/run_20250626_024425/: best_model.pt  final_model.pt
output/showcase/: test_data.txt
output/web_viewer/: ENHANCEMENT_COMPLETE.md  FINAL_ENHANCEMENT_SUMMARY.md  MotionData  NEURAL_INTEGRATION_README.md  NEURAL_WARMUP_COMPLETE.md  README_NEW.md  RSMT_IMPLEMENTATION_PLAN.md  RSMT_TRANSITION_EXPLANATION.md  THREEJS_FIX_SUMMARY.md  THREEJS_R177_UPGRADE_COMPLETE.md  THREE_JS_FIX.md  THREE_JS_FIX_COMPLETE.md  THREE_JS_MIGRATION_GUIDE.md  THREE_JS_R177_UPDATE.md  WEBSOCKET_IMPLEMENTATION_COMPLETE.md  animation_test.txt  bvh-transition-system.html  bvh_diagnostic.html  bvh_test.html  debug_loading.html  debug_simple.html  deepphase.onnx  elated_reference.bvh  emotional_journey_transitions.bvh  final_test.bvh  index.html  index_new.html  minimal_test.html  modern_three_test.html  motion_analyzer.js  motion_capture.js  motion_transitions.html  motion_viewer.html  movement_energy_transitions.bvh  phase_visualizer.js  rsmt_client.js  rsmt_comparison.py  rsmt_poc.py  rsmt_server.py  rsmt_server_notorch.py  (+31 more)
output/web_viewer/archive/: animation_test.html  basic_test.html  debug_viewer.html  diagnostic_test.html  direct_skeleton_viewer.html  extreme_motion.html  fixed_bvh_viewer.html  full_skeleton_viewer.html  known_good_bvh_viewer.html  local_motion_viewer.html  old_index.html  proper_bvh_viewer.html  proper_skeletal_viewer.html  real_bvh_data_viewer.html  real_bvh_motion_viewer.html  real_bvh_transitions.html  simple_motion_viewer.html  simple_test.html  test.html  working_bvh_viewer.html  working_motion_viewer.html  working_skeleton_viewer.html
output/web_viewer/js/: AdvancedVRMLoader.js  AnimationBlender.js  ClassroomCameraController.js  ClassroomCameraController.js.backup  ClassroomCameraController.module.js  ClassroomEnvironment.js  ClassroomGLBLoader.js  EnhancedCharacterSystem.js  EnhancedVRMBVHAdapter.js  FacialExpressionSystem.js  PlayerModule.js  VRMBVHAdapter.js  VRMDiagnostics.js  VRMLightingManager.js  VRMMaterialExtractor.js  VRMVisibilityFix.js  vrm_mesh_classroom.js  vrm_mesh_skeleton.js
scripts/: setup_dev.py
scripts/benchmarking/: extreme_motion_test.py
scripts/inference/: rsmt_inference.py  rsmt_transition_demo.py  simple_showcase.py
scripts/phase_processing/: analyze_phase_vectors.py  prepare_phase_training.py
scripts/preprocessing/: preprocess_complete.py  run_preprocessing.sh  simple_preprocess.py  simplified_preprocessing.py  step1_convert_bvh.py
scripts/training/: minimal_train.py  train_manifold_model.py  train_transition_sampler.py
scripts/utilities/: enhanced_animation_test.py  final_test.py  motion_transition_viewer.py  visualize_results.py
src/Datasets/: DeepPhaseDataModule.py
src/geometry/: fixed_kinematics.py  forward_kinematics.py  pytorch3d_transforms.py
src/utils/: BVH_mod.py  BVH_mod.py.backup  bvh_writer.py  motion_decoder.py
tests/analysis/: analyze_bvh_files.py  analyze_motion_transitions.py  check_data.py  inspect_binary_format.py  inspect_data.py  inspect_dataset.py
tests/debug/: advanced_debug.py  debug_motion_decoder.py
tests/unit/: test.py  test_motion_decoder.py  test_pipeline.py  test_server_status.py  test_showcase.py
tools/ci_cd/: health_check.py  metrics_collector.py  monitor.sh
tools/code_quality/: check_docs.py  check_patterns.py
tools/migration/: migrate_codebase.py  validate_migration.py
tools/testing/: run_tests.py
